# timesheets-tracker

./: .gitignore  .prettierrc  LICENSE.md  README.md  bun.lockb  exe-config.json  install-timesheet-tracker-as-a-windows-service.ts  package-lock.json  package.json  tsconfig.json  types.d.ts  uninstall-timesheet-tracker-as-a-windows-service.ts
api/: package-lock.json  package.json  timesheets-tracker-database.sqlite3  tsconfig.build.json  tsconfig.json
api/src/: app.const.ts  app.controller.ts  app.module.ts  app.service.ts  icon.ts  install-timesheet-tracker-as-a-windows-service.ts  main.ts  start-server.ts  types.d.ts
api/src/activeStates/: active-states.controller.spec.ts  active-states.controller.ts  active-states.listener.ts  active-states.module.ts  active-states.service.spec.ts  active-states.service.ts
api/src/activities/: activities.controller.ts  activities.listener.ts  activities.module.ts  activities.service.ts
api/src/auto-notes/: auto-notes.controller.spec.ts  auto-notes.controller.ts  auto-notes.module.ts  auto-notes.service.spec.ts  auto-notes.service.ts
api/src/auto-tags/: auto-tags.controller.spec.ts  (+4 more)
api/test/: app.e2e-spec.ts
chrome-extension/: manifest-prd.json  manifest.json
client/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.ts
client/scripts/: ignore-types-in-generated-files.ts
client/src/: App.scss  App.tsx  main.scss  main.tsx  routes.tsx  variables.scss
exe/: Cargo.toml  build.rs  launcher.js
exe/src/: main.rs
icon/: icon.psd  icon2.psd
types/: types.js  types.ts
(+134 files in other folders)
